# SOEMAUTDServer

./: Cargo.toml  Makefile.toml  README.md  ThirdPartyNotice.txt
.github/workflows/: release.yml
src/: log_formatter.rs  main.rs
tools/license-checker/src/: main.rs
