[package]
name = "SOEMAUTDServer"
version = "35.0.0"
authors = ["shun suzuki <suzuki@hapis.k.u-tokyo.ac.jp>"]
edition = "2024"
license = "MIT"

description = "AUTDServer"
repository = "https://github.com/shinolab/SOEMAUTDServer"
readme = "README.md"
keywords = ["autd"]

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread"] }
autd3-protobuf = { version = "35.0.0", features = ["async-trait"] }
autd3-link-soem = { version = "35.0.0", features = ["async", "async-trait"] }
autd3-core = { version = "35.0.0", features = ["sleep", "geometry"] }
anyhow = "1.0.98"
ctrlc = "3.4.7"
tonic = "0.13.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
chrono = "0.4.41"
tracing-core = "0.1.34"
core_affinity = "0.8.3"
